libs/@local/hashql/ast/tests/ui/lowering/import-resolver/module-not-found.jsonc
//@ run: fail
//@ description: module shouldn't be found
["use", "kernel::foo", { "#tuple": ["baz"] }, "_"]
//~^ ERROR Module 'foo' not found
